GPII-2774: Fix a couple of high contrast issues.

--- a/demos/src/css/qi-frontend-demo.css
+++ b/demos/src/css/qi-frontend-demo.css
@@ -204,7 +204,7 @@ body.highContrast {
     color: #fff;
 }
 
-.highContrast .gpii-demo-content h2,
+.highContrast #gpii-demo-repoTitle,
 .highContrast .gpii-demo-control {
     color: #fff;
 }
